--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jsdom": "^21.1.7",
+    "fast-xml-parser": "^4.4.0",
+    "jsdom": "^24.1.0",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "replicate": "^0.31.0",
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bun": "^1.1.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/turndown": "^5.0.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
