--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.32.1",
     "@types/jsdom": "^21.1.7",
     "fast-xml-parser": "^4.4.0",
     "jsdom": "^24.1.0",
