--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.0.5",
     "@anthropic-ai/sdk": "^0.32.1",
     "@types/jsdom": "^21.1.7",
+    "ai": "^4.0.14",
     "fast-xml-parser": "^4.4.0",
     "jsdom": "^24.1.0",
     "next": "14.2.4",
